tests/semantic_errors/andrei5_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = nil - nil
end

main()
